--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                 <div class="w-100 position-relative cont12" style="height: 380px !important;">
 
                     <img style="height: 380px !important; width: 415px !important; cursor: pointer;" src="./pics/Image1.png" alt="1">
-                        <a class="hovimg position-absolute" href="#"><img src="./pics/Hover.png" alt="Hover"></a>
+                        <a class="hovimg position-absolute" href="#"><img style="width: 330px !important; height: 322px !important;" src="./pics/Hover.png" alt="Hover"></a>
 
                 </div>
 
@@ -197,7 +197,7 @@
                 <div class="w-100 position-relative cont12" style="height: 380px !important;">
 
                     <img style="height: 380px !important; width: 415px !important; cursor: pointer;" src="./pics/2.png" alt="1">
-                        <a class="hovimg position-absolute" href="#"><img src="./pics/Hover.png" alt="Hover"></a>
+                        <a class="hovimg position-absolute" href="#"><img style="width: 330px !important; height: 322px !important;" src="./pics/Hover.png" alt="Hover"></a>
 
                 </div>
 
@@ -208,7 +208,7 @@
                 <div class="w-100 position-relative cont12" style="height: 380px !important;">
 
                     <img style="height: 380px !important; width: 415px !important; cursor: pointer;" src="./pics/3.png" alt="1">
-                        <a class="hovimg position-absolute" href="#"><img src="./pics/Hover.png" alt="Hover"></a>
+                        <a class="hovimg position-absolute" href="#"><img style="width: 330px !important; height: 322px !important;" src="./pics/Hover.png" alt="Hover"></a>
 
                 </div>
 
@@ -219,7 +219,7 @@
                 <div class="w-100 position-relative cont12" style="height: 380px !important;">
 
                     <img style="height: 380px !important; width: 415px !important; cursor: pointer;" src="./pics/01.png" alt="1">
-                        <a class="hovimg position-absolute" href="#"><img src="./pics/Hover.png" alt="Hover"></a>
+                        <a class="hovimg position-absolute" href="#"><img style="width: 330px !important; height: 322px !important;" src="./pics/Hover.png" alt="Hover"></a>
 
                 </div>
 
@@ -230,7 +230,7 @@
                 <div class="w-100 position-relative cont12" style="height: 380px !important;">
 
                     <img style="height: 380px !important; width: 415px !important; cursor: pointer;" src="./pics/02.png" alt="1">
-                        <a class="hovimg position-absolute" href="#"><img src="./pics/Hover.png" alt="Hover"></a>
+                        <a class="hovimg position-absolute" href="#"><img style="width: 330px !important; height: 322px !important;" src="./pics/Hover.png" alt="Hover"></a>
 
                 </div>
 
@@ -241,7 +241,7 @@
                 <div class="w-100 position-relative cont12" style="height: 380px !important;">
 
                     <img style="height: 380px !important; width: 415px !important; cursor: pointer;" src="./pics/03.png" alt="1">
-                        <a class="hovimg position-absolute" href="#"><img src="./pics/Hover.png" alt="Hover"></a>
+                        <a class="hovimg position-absolute" href="#"><img style="width: 330px !important; height: 322px !important;" src="./pics/Hover.png" alt="Hover"></a>
 
                 </div>
 
